code cleanup, removed duplications